# neural_network_mnist_solver

./: README.md
python/: helpers.py  main.py  network.py
python/layers/: activation_layer.py  fully_connected_layer.py  layer.py
rust/: Cargo.toml
rust/src/: error.rs  main.rs
rust/src/dataset/: mnist.rs
rust/src/network/: math.rs  mod.rs
rust/src/network/layers/: activation.rs  fully_connected.rs  mod.rs
rust/src/solver/: mnist.rs  mod.rs  xor.rs
